Make sure snippets compile